# ludev

./: .dockerignore  .gitignore  .gitmodules  Cargo.toml  LEARN.md  README.md  build.Dockerfile  build.sh  index.d.ts  package.json  pnpm-lock.yaml
.github/workflows/: build.yml
faber/: Cargo.toml  README.md
faber/src/: lib.rs
forgic/: Cargo.toml  README.md
forgic/src/: lib.rs
libic/: Cargo.toml  README.md
libic/src/: format.rs  lib.rs  maven.rs  util.rs
ludic/: Cargo.toml  README.md
ludic/src/: lib.rs  structs.rs  util.rs
ludic/src/converters/: faber.rs  forgic.rs  mod.rs
quantum/: Cargo.toml
quantum/src/: lib.rs
src/: lib.rs
tests/: forge.rs  index.ts
vanel/: Cargo.toml  README.md
vanel/src/: lib.rs
