[package]
description = "Blank Description"
edition = "2021"
license = "GPL-3.0"
name = "libic"
version = "0.1.0"

[dependencies]
either = {version = "1.6.1", features = ["serde"]}
futures = "0.3"
minreq = {version = "2.6.0", features = ["https"]}
reqwest = "0.11.11"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
serde_yaml = "0.8"
toml = "0.5"
xmltojson = "0"
