[package]
description = "Blank Description"
edition = "2021"
license = "GPL-3.0"
name = "ludic"
version = "0.1.0"

[dependencies]
either = {version = "1.6.1", features = ["serde"]}
faber = {version = "0.1.0", path = "../faber"}
forgic = {version = "0.1.0", path = "../forgic"}
futures = "0.3"
libic = {version = "0.1.0", path = "../libic"}
quantum-mc = {version = "0.1.0", path = "../quantum"}
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
vanel = {version = "0.1.0", path = "../vanel"}
neon = {version = "0.10.1", default-features = false, features = ["napi-6", "channel-api", "promise-api"]}
tokio = {version = "1", features = ["rt-multi-thread"]}
once_cell = "1"
